--- a/ProjectProposal_group036.ipynb
+++ b/ProjectProposal_group036.ipynb
@@ -13,10 +13,10 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
+    "- Gabriel Beal\n",
+    "- Marc Isaia\n",
+    "- Daniela Molina\n",
+    "- Haoxuan Cui\n",
     "- Wasp"
    ]
   },
