--- a/ProjectProposal_group036.ipynb
+++ b/ProjectProposal_group036.ipynb
@@ -16,7 +16,7 @@
     "- Gabriel Beal\n",
     "- Marc Isaia\n",
     "- Daniela Molina\n",
-    "- Haoxuan Cui\n",
+    "- Haoxuan Cui\n"
    ]
   },
   {
