Added some comments

--- a/FinalProject_group036.ipynb
+++ b/FinalProject_group036.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "CSV from the Google Form Survey we conducted:\n",
     "- Dataset Name: Social Media and Mental Health\n",
-    "- Link to the dataset: https://raw.githubusercontent.com/COGS108/group036_wi21/main/Social%20Media%20and%20Mental%20Health.csv?token=AJJHPBN3BQHNXLMZPWR5UZTAFWDK2\n",
+    "- Link to the dataset: \"Social Media and Mental Health.csv\" in our Github Repo\n",
     "- Number of Observations: 182\n",
     "This dataset is the CSV file created from the responses received on our survey which collected data on social media use and mental health. It contains information about the individual’s identity, their social media usage (average time spent, which apps they use, when they first started using them), and their current mental health as well as whether they feel that it can be attributed to social media."
    ]
@@ -167,77 +167,35 @@
    "source": [
     "# Rename columns\n",
     "df.columns = ['time', 'gender', 'age', 'use social media', 'hours per day', 'days per week', 'check morning', 'check night', 'app count', 'start using', 'impact', 'mental health issues', 'suicidal thoughts', 'SM contributed', 'feedback']\n",
+    "\n",
     "# Remove responses with age over 28\n",
     "df = df[df['age'] <= 28]\n",
+    "\n",
     "# Change yes and no to true and false\n",
     "df = df.replace({\"Yes\": True, \"No\": False})\n",
+    "\n",
     "# Drop time column - not relevant to the research\n",
     "df.drop(columns=['time'], inplace = True)\n",
+    "\n",
+    "# Clean up time used\n",
     "df[\"hours per day\"] = df[\"hours per day\"].str.replace(\" hours\", \"\")\n",
     "df = df.replace({\"Once a week\": \"1\", \"2-3 times a week\": \"2-3\", \"3-5 times a week\": \"3-5\", \"I use it every day\":\"7\"})\n",
+    "\n",
+    "# Clean up gender\n",
+    "df = df.replace({'Non-binary ': 'Non-binary', \"Don’t know yet\": \"Prefer not to say\"})\n",
     "df = df.replace({\"Non-Binary \": \"Non-binary\", \"Female- heads up this is worded ambiguously and people may interpret it as what gender they're attracted to\": \"Female\"})\n",
+    "\n",
+    "# Clean up suicidal thoughts\n",
+    "df = df.replace({\"a few times but have never acted on it\": True, \"Maybe \": \"Prefer not to say\", \"Thought about it but can’t do it\": True, \"Passive suicidal thoughts. This means I do not really plan to ever commite sucide but instead just think about it as a option. Then, I snapped out of it because my mood imrpoves.\": True})\n",
+    "df['suicidal thoughts'].value_counts()\n",
+    "\n",
+    "# Change strings to numbers\n",
     "df['age'] = pd.to_numeric(df['age'])\n",
-    "df['impact'] = pd.to_numeric(df['impact'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['impact'] = pd.to_numeric(df['impact'])\n",
+    "\n",
+    "# Save feedback in separate dataframe\n",
     "df_feedback = df\n",
     "df = df.drop(columns=['feedback'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False                95\n",
-       "True                 72\n",
-       "Prefer not to say    11\n",
-       "Name: suicidal thoughts, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Additional data cleaning\n",
-    "df = df.replace({\"a few times but have never acted on it\": True, \"Maybe \": \"Prefer not to say\", \"Thought about it but can’t do it\": True, \"Passive suicidal thoughts. This means I do not really plan to ever commite sucide but instead just think about it as a option. Then, I snapped out of it because my mood imrpoves.\": True})\n",
-    "df['suicidal thoughts'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Male                 97\n",
-       "Female               73\n",
-       "Non-binary            5\n",
-       "Prefer not to say     5\n",
-       "Name: gender, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = df.replace({'Non-binary ': 'Non-binary', \"Don’t know yet\": \"Prefer not to say\"})\n",
-    "df['gender'].value_counts()"
    ]
   },
   {
@@ -246,6 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to check whether the individual has Depression\n",
     "def checkDepression(string):\n",
     "    if 'Depression' in string:\n",
     "        return True\n",
@@ -259,6 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to check whether the individual has Anxiety\n",
     "def checkAnxiety(string):\n",
     "    if 'Anxiety' in string:\n",
     "        return True\n",
@@ -272,16 +232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create new columns for whether the individual has Depression/Anxiety\n",
     "df['Depression'] = df['mental health issues'].apply(checkDepression)\n",
-    "df['Anxiety'] = df['mental health issues'].apply(checkAnxiety)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['Anxiety'] = df['mental health issues'].apply(checkAnxiety)\n",
+    "\n",
     "# Removing mental health issues due to the reduced scope of the question\n",
     "df = df.drop(columns=['mental health issues'])"
    ]
@@ -292,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Count how many social media apps they use (out of the options we gave)\n",
+    "# Function to count how many social media apps they use (out of the options we gave)\n",
     "def appCount(string):\n",
     "    if 'None of the above' in string:\n",
     "        return 0\n",
@@ -306,294 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get app count per individual\n",
     "df['app count'] = df['app count'].apply(appCount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>use social media</th>\n",
-       "      <th>hours per day</th>\n",
-       "      <th>days per week</th>\n",
-       "      <th>check morning</th>\n",
-       "      <th>check night</th>\n",
-       "      <th>app count</th>\n",
-       "      <th>start using</th>\n",
-       "      <th>impact</th>\n",
-       "      <th>suicidal thoughts</th>\n",
-       "      <th>SM contributed</th>\n",
-       "      <th>Depression</th>\n",
-       "      <th>Anxiety</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>22</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2-3</td>\n",
-       "      <td>3-5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Middle School</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>22</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1-2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>7</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Elementary School</td>\n",
-       "      <td>5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>19</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>3-5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Elementary School</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2-3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>24</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3-4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Middle School</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2-3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>23</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1-2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>19</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1-2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>16</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1-2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Middle School</td>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>180 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     gender  age  use social media hours per day days per week check morning  \\\n",
-       "0    Female   22              True           2-3           3-5          True   \n",
-       "1    Female   22              True           1-2             7         False   \n",
-       "2    Female   21              True            4+             7          True   \n",
-       "3    Female   19              True            4+           3-5          True   \n",
-       "4    Female   21              True           2-3             7          True   \n",
-       "..      ...  ...               ...           ...           ...           ...   \n",
-       "177    Male   24              True           3-4             7          True   \n",
-       "178    Male   20              True           2-3             7          True   \n",
-       "179    Male   23              True           1-2             7          True   \n",
-       "180    Male   19              True           1-2           NaN         False   \n",
-       "181    Male   16              True           1-2             7          True   \n",
-       "\n",
-       "    check night  app count        start using  impact suicidal thoughts  \\\n",
-       "0         False          2      Middle School       6              True   \n",
-       "1          True          4        High School       7             False   \n",
-       "2          True          4  Elementary School       5             False   \n",
-       "3          True          4  Elementary School       3              True   \n",
-       "4          True          2        High School       4             False   \n",
-       "..          ...        ...                ...     ...               ...   \n",
-       "177        True          1      Middle School       4              True   \n",
-       "178        True          4        High School       5             False   \n",
-       "179       False          0        High School       3             False   \n",
-       "180        True          1        High School       5              True   \n",
-       "181        True          1      Middle School       5              True   \n",
-       "\n",
-       "    SM contributed  Depression  Anxiety  \n",
-       "0            Maybe        True     True  \n",
-       "1            Maybe        True     True  \n",
-       "2             True        True    False  \n",
-       "3             True        True     True  \n",
-       "4             True       False    False  \n",
-       "..             ...         ...      ...  \n",
-       "177          Maybe        True     True  \n",
-       "178          False       False    False  \n",
-       "179           True       False    False  \n",
-       "180          False       False    False  \n",
-       "181          Maybe       False    False  \n",
-       "\n",
-       "[180 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -971,6 +639,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph above is a count of ages of respondents of our survey. We tried to target mainly young adults, since our research focuses on individuals who grew up or are growing up with social media applications."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -990,6 +665,13 @@
    ],
    "source": [
     "sns.histplot(df['app count'], bins=7, kde=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The majority of our respondents use between 2 to 4 social media applications regularly."
    ]
   },
   {
@@ -1097,20 +779,6 @@
    "source": [
     "With a Beta 1 value of -.0049 this means that for every app count increase there is an expected -0.0049 increase in impact which means that for every app count increase (by 1 app) there is a very slight increase in the negative impact that it has on a users' mental health. The p' value of 0.959 means that we cannot reject the null hypothesis between app count and impact."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1364,7 +1032,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1620,11 +1290,29 @@
     "\n",
     "# generate plot\n",
     "ax = sub_df2.plot(kind='bar', stacked=True, rot=0,\n",
-    "                  title='Anxiety does not appear to differ by hours per day')\n",
+    "                  title='Anxiety does not appear to differ much by hours per day')\n",
     "\n",
     "# customize plot\n",
     "ax.legend(('Does not have anxiety','Has anxiety'), loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
     "ax.set_ylabel(\"Proportion of respondents\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# t-Test: compare means between variables (2 groups of same type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic regression"
    ]
   },
   {
