Added the hypothesis, portions of the discussion, and the contributions

--- a/FinalProject_group036.ipynb
+++ b/FinalProject_group036.ipynb
@@ -76,8 +76,33 @@
     "*Fill in your background and prior work here* \n",
     "\n",
     "References (include links):\n",
-    "- 1)\n",
-    "- 2)"
+    "- 1) [A Majority of Teens Have Experienced Some Form of Cyberbullying](https://www.pewresearch.org/internet/2018/09/27/a-majority-of-teens-have-experienced-some-form-of-cyberbullying/)\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- 2) [DATA > Teens, Social Media & Technology Overview 2015](https://www.pewresearch.org/internet/2015/04/09/teens-social-media-technology-2015/) \n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- 3) [Social Media Use and its Connection to Mental Health: A Systematic Review](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7364393/#:~:text=A%20new%20study%20found%20that,the%20group%20using%20social%20media)\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- 4) [Mental Health Statistics (National Institute of Mental Health)](https://www.nimh.nih.gov/health/statistics/mental-illness.shtml#part_155771)\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- 5) [Data and Statistics on Children’s Mental Health](https://www.cdc.gov/childrensmentalhealth/data.html)\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- 6) [The Latest Trends in Social Media](https://www.globalwebindex.com/hubfs/Downloads/Social-H2-2018-report.pdf)\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- 7) [How the Modern World Makes Us Mentally Ill](https://www.youtube.com/watch?v=Wuf0-x9Pbu4&ab_channel=FightMediocrity)\n",
+    "\n",
+    "Explanation:"
    ]
   },
   {
@@ -91,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your hypotheses here*"
+    "We believe that there is a correlation between social media use of teenagers and the rising number in mental health disorders amongst them in the United States, such as depression and anxiety, and has a more negative impact on teenage girls."
    ]
   },
   {
@@ -1808,7 +1833,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your discussion information here*"
+    "Conclusion:\n",
+    "\n",
+    "Discussion: I believe that we learned a lot about the data science process through this project. Coming into this class none of us had done anything similar. We have prior experience in coding but not using pandas or working with data in this format. This turned out to be our biggest limitation as we went to gather our own data through the use of a survey. I believe that we asked good questions but since we weren't familiar with which data types were the most useful to work with in Pandas we definitely made some mistakes on the input types we took from the survey. I think if we were to continue research into this field the area where we could make the largest improvement is our data gathering. Also to improve our machine learning model a larger response size we think would be able to improve the accuracy."
    ]
   },
   {
@@ -1822,8 +1849,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Specify who in your group worked on which parts of the project.*"
+    "Daniela Molina: Primarily responsible for a majority of the code work in the project. She was essential to helping sort through and interpret the data during the EDA phase and a huge help overall to the team.\n",
+    "\n",
+    "Gabriel Beal: Took on a more leadership role and helped with delegating the work and organizing the group meetings. Helped out Dani on the coding, Marc with the writeup, and Haoxuan with the video portion. \n",
+    "\n",
+    "Marc Isaia: In charge of the final writeup and interpretation. Has the most experience writing reports so he took the lead on a majority of the writing portions.\n",
+    "\n",
+    "Haoxuan Cui: Took lead on the video section of the final project. Organized the slides and the script."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
